k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-api
  namespace: python-api
spec:
  selector:
    app: python-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
